--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="/app.js" defer></script>
 </head>
 <body>
-    
+    <div class="hero-section">
+        <nav></nav>
+    </div>
 </body>
 </html>
