--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="hero-section">
-        <nav></nav>
+        <nav>
+            <h2 class="logo">Card Memory</h2>
+        </nav>
     </div>
 </body>
 </html>
