--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/styles.css" />
     <title>Card Memory</title>
     <script src="/app.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="hero-section">
-        <nav>
-            <h2 class="logo">Card Memory</h2>
-        </nav>
+      <nav>
+        <h2 class="logo">Card Memory</h2>
+        <button>
+            <i class="fa-solid fa-circle-question"></i>
+            Help
+        </button>
+        <button>
+            <i class="fa-solid fa-plus"></i>
+            NEW
+        </button>
+        <button>
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <button>
+            <i class="fa-solid fa-gear"></i>
+        </button>
+      </nav>
     </div>
-</body>
+  </body>
 </html>
