nav elements have been completed

--- a/index.html
+++ b/index.html
@@ -18,20 +18,27 @@
     <div class="hero-section">
       <nav>
         <h2 class="logo">Card Memory</h2>
-        <button>
+
+        <div class="btn-container">
+          <button>
             <i class="fa-solid fa-circle-question"></i>
             Help
-        </button>
-        <button>
+          </button>
+          <button>
             <i class="fa-solid fa-plus"></i>
             NEW
-        </button>
-        <button>
+          </button>
+          <button>
             <i class="fa-solid fa-bars"></i>
-        </button>
-        <button>
+          </button>
+          <button>
             <i class="fa-solid fa-gear"></i>
-        </button>
+          </button>
+        </div>
+
+        <div class="account-icon">
+            <i class="fa-solid fa-user"></i>
+        </div>
       </nav>
     </div>
   </body>
