game board & start game containers

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
           <i class="fa-solid fa-user"></i>
         </div>
       </nav>
+
+      <div class="start-game"></div>
+      <div class="game-board hidden"></div>
     </div>
   </body>
 </html>
