styling the main container

--- a/index.html
+++ b/index.html
@@ -41,8 +41,19 @@
         </div>
       </nav>
 
-      <div class="start-game"></div>
-      <div class="game-board hidden"></div>
+      <div class="main-container">
+        <div class="start-game">
+          <div class="column1">
+            <h2>Board Size</h2>
+            <div class="size-btns">
+              <button>Small</button>
+              <button>Medium</button>
+              <button>Large</button>
+            </div>
+          </div>
+        </div>
+        <div class="game-board hidden"></div>
+      </div>
     </div>
   </body>
 </html>
