text title has been styled

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="main-container">
         <div class="start-game">
           <div class="column1">
-            <h2>Board Size</h2>
+            <h2 class="text-title">Board Size</h2>
             <div class="size-btns">
               <button>Small</button>
               <button>Medium</button>
