--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
               <button>Medium</button>
               <button>Large</button>
             </div>
+            <div class="start-btn">
+              <button>Start</button>
+            </div>
           </div>
         </div>
         <div class="game-board hidden"></div>
