flex-grow ain't working

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
               <button>Medium</button>
               <button>Large</button>
             </div>
+            <div class="choose-cards"></div>
             <div class="start-btn">
               <button>Start</button>
             </div>
