going back to js

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="choose-cards"></div>
             <div class="start-btn">
-              <button>Start</button>
+              <button id="startBtn">Start</button>
             </div>
           </div>
         </div>
