cards object in the cards.js file | to add cards randomly each time

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
         </div>
         <div class="game-board hidden"></div>
       </div>
+
+      <div class="game-container"></div>
     </div>
   </body>
 </html>
