--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="/styles.css" />
     <title>Card Memory</title>
-    <script src="/app.js" defer></script>
+    <script type="module" src="/app.js" defer></script>
   </head>
   <body>
     <div class="hero-section">
