creating the hidden img

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
         <div class="game-board hidden"></div>
       </div>
 
-      <div class="game-container"></div>
+      <div class="game-container">
+        <div class="game-over hidden">
+          <img src="/img/gameOver.png" alt="you-win">
+        </div>
+      </div>
     </div>
   </body>
 </html>
