ham icon, responsive layout, responsive navbar

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <nav>
         <div class="btn-container">
           <h2 class="logo">Card Memory</h2>
+          <i class="fa-solid fa-bars hidden"></i>
 
           <button>
             <i class="fa-solid fa-circle-question"></i>
