ham icon has been fixed | mobile-only class

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <div class="btn-container">
           <h2 class="logo">Card Memory</h2>
-          <i class="fa-solid fa-bars hidden"></i>
+          <i class="fa-solid fa-bars mobile-only"></i>
 
           <button>
             <i class="fa-solid fa-circle-question"></i>
